move to java 8.  fill the pid function we needed with java 9 with an extension function.